--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-force-graph-3d": "^1.28.0",
+    "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1",
     "three": "^0.178.0"
   },
